# CMProject

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindGUROBI.cmake
data/gridResult/: GridResult_notte.txt
docs/: CMProject.asta
docs/report/: relazione.tex  report.tex
docs/report/data/Comparison/: standardMonk2.gp  zoomMonk2.gp
docs/report/data/Comparison/Monk1/: CR_M1_Monk1_standard.gp  CR_M1_Monk1_zoom.gp  CR_M2_Monk1_standard.gp  CR_M2_Monk1_zoom.gp  M1_standard_Monk1.gp  M1_zoom_Monk1.gp  M2_standard_Monk1.gp  M2_zoom_Monk1.gp  R_standard_Monk1.gp  R_zoom_Monk1.gp
docs/report/data/Comparison/Monk2/: CR_M1_Monk2_standard.gp  CR_M2_Monk2_standard.gp  CR_M2_Monk2_zoom.gp  M1_standard_Monk2.gp  M1_zoom_Monk2.gp  M2_standard_Monk2.gp  M2_zoom_Monk2.gp  R_standard_Monk2.gp  R_zoom_Monk2.gp
docs/report/data/Comparison/Monk3/: CR_M1_Monk3_standard.gp  CR_M1_Monk3_zoom.gp  CR_M2_Monk3_standard.gp  CR_M2_Monk3_zoom.gp  M1_standard_Monk3.gp  M1_zoom_Monk3.gp  M2_standard_Monk3.gp  M2_zoom_Monk3.gp  R_standard_Monk3.gp  R_zoom_Monk3.gp
docs/report/data/LBFGS/Monk1/: CS_standard.gp  CS_zoom.gp  CT_standard.gp  CT_zoom.gp  LBFGS_0.0003_Monk1_Results.txt  LBFGS_0.0005_Monk1_Results.txt  LBFGS_0.0007_Monk1_Results.txt  LBFGS_0.0009_Monk1_Results.txt  LBFGS_0.0_Monk1_Results.txt  LBFGS_10_Monk1_Results_NoReg.txt  LBFGS_15_Monk1_Results_NoReg.txt  LBFGS_5_Monk1_Results_NoReg.txt  LBFGS_L1_0.3_Monk1_Results.txt  LBFGS_L1_0.3_Monk1_Results_SMI.txt  LBFGS_L1_L2_0_Monk1_Results_SMI.txt  LBFGS_L2_0.0003_Monk1_Results_SMI.txt  LBFGS_L2_0.0007_Monk1_Results.txt  LBFGS_L2_0.0_Monk1_Results.txt  R_standard.gp  R_zoom.gp  standard.gp  zoom.gp
docs/report/data/LBFGS/Monk2/: CS_standard.gp  CS_zoom.gp  CT_standard.gp  CT_zoom.gp  LBFGS_0.0003_Monk2_Results.txt  LBFGS_0.0005_Monk2_Results.txt  LBFGS_0.0007_Monk2_Results.txt  LBFGS_0.0_Monk2_Results.txt  LBFGS_10_Monk2_Results_NoReg.txt  LBFGS_15_Monk2_Results_NoReg.txt  LBFGS_5_Monk2_Results_NoReg.txt  LBFGS_L1_0.3_Monk2_Results.txt  LBFGS_L1_0.3_Monk2_Results_SMI.txt  LBFGS_L2_0.0003_Monk2_Results.txt  LBFGS_L2_0.0003_Monk2_Results_SMI.txt  LBFGS_L2_0.0005_Monk2_Results.txt  LBFGS_L2_0.0007_Monk2_Results.txt  R_standard.gp  R_zoom.gp  standard.gp  zoom.gp
docs/report/data/LBFGS/Monk3/: CS_standard.gp  CS_zoom.gp  CT_standard.gp  CT_zoom.gp  LBFGS_0.0003_Monk3_Results.txt  LBFGS_0.0005_Monk3_Results.txt  LBFGS_0.0007_Monk3_Results.txt  LBFGS_0.0_Monk3_Results.txt  LBFGS_L1_0.3_Monk3_Results.txt  LBFGS_L1_0.3_Monk3_Results_SMI.txt  LBFGS_L2_0.0003_Monk3_Results.txt  LBFGS_L2_0.0003_Monk3_Results_SMI.txt  LBFGS_L2_0.0005_Monk3_Results.txt  LBFGS_L2_0.0007_Monk3_Results.txt  LBFGS_L2_0.0_Monk3_Results.txt  R_standard.gp  R_zoom.gp  standard.gp  zoom.gp
docs/report/data/MGD/CUP/: CS_standard.gp  CS_zoom.gp  CT_standard.gp  CT_zoom.gp  R_standard.gp  R_zoom.gp
docs/report/data/MGD/Monk1/: CS_zoom.gp  CT_zoom.gp  R_standard.gp  (+1 more)
docs/report/sez/: appendix.tex  code.tex  conclusions.tex  experiments.tex  introduction.tex  method.tex  references.tex
src/: layer.cpp  layer.h
src/activationFunction/: logisticFunction.cpp
src/exception/: exception.cpp  exception.h
src/layer/: layer.cpp  layer.h
src/network/: network.cpp  network.h
src/optimizer/: LBFGS.cpp  LBFGS.h  ProximalBundleMethod.cpp  ProximalBundleMethod.h  gradientDescent.cpp  gradientDescent.h  optimizer.h
src/preprocessing/: preprocessing.cpp  preprocessing.h
src/regularizer/: L1.cpp  L1.h  L2.cpp  L2.h  regularizer.h
(+167 files in other folders)
